adding PWA support to the sveltekit application

--- a/src/app.html
+++ b/src/app.html
@@ -6,15 +6,16 @@
 		<!-- user-scalable=no -->
 		<meta name="theme-color" content="#E3E3E3">
 
-		<!-- 
-		Website Icons & Favicons -->
+		<!-- ... Website Icons & Favicons ... -->
 		<link rel="icon" type="image/png" href="assets/img/favicon/48x48.png" sizes="48x48">
 		<link rel="icon" type="image/png" href="assets/img/favicon/57x57.png" sizes="57x57">
 		<link rel="icon" type="image/png" href="assets/img/favicon/72x72.png" sizes="72x72">
 		<link rel="apple-touch-icon" href="assets/img/favicon/114x114.png" sizes="114x114">
 
-		<!-- 
-		Website Fonts -->
+		<!-- ... PWA - MANIFEST ... -->
+		<link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
+
+		<!-- ... Website Fonts ... -->
 		<!-- <link rel="preload" as="font" href="/fonts/RobotopSlab-VariableFont_wght.ttf" type="font/ttf" crossorigin="anonymous"> -->
 		<!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
 		<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
