--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- user-scalable=no -->
 		<!-- https://stackoverflow.com/questions/50729451/pwa-manifest-json-theme-color-and-background-color-not-working-splash-scr -->
 		<meta name="theme-color" content="#292929" />
 
@@ -18,11 +17,9 @@
 		<link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
 
 		<!-- ... Website Fonts ... -->
-		<!-- <link rel="preload" as="font" href="/fonts/RobotopSlab-VariableFont_wght.ttf" type="font/ttf" crossorigin="anonymous"> -->
-		<!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
-		<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-		<!-- <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> -->
-		<!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 		%svelte.head%
 	</head>
