--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- https://stackoverflow.com/questions/6483425/prevent-iphone-from-zooming-in-on-select-in-web-app -->
+
+    <!-- <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes"> -->
 		<!-- https://stackoverflow.com/questions/50729451/pwa-manifest-json-theme-color-and-background-color-not-working-splash-scr -->
+
+    <!-- https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
+
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+
 		<meta name="theme-color" content="#292929" />
 
 		<!-- ... Website Icons & Favicons ... -->
