--- a/src/app.html
+++ b/src/app.html
@@ -27,8 +27,8 @@
     <script>(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})(window,document,"script","https://mc.yandex.ru/metrika/tag.js","ym");ym(86583540,"init",{clickmap:true,trackLinks:true,accurateTrackBounce:true,webvisor:true});</script>
 
     <!-- ... GOOGLE V1 - ORIGINAL ... -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"></script>  -->
-    <!-- <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-60160331-9');</script> -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"></script> 
+    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-60160331-9');</script>
     <!-- ... GOOGLE V2 - NONCE BASED ... -->
     <!-- <script>
       (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
