GA and style update

--- a/src/app.html
+++ b/src/app.html
@@ -28,7 +28,7 @@
 
     <!-- ... GOOGLE V1 - ORIGINAL ... -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"></script> 
-    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-60160331-9');</script>
+    <!-- <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-60160331-9');</script> -->
     <!-- ... GOOGLE V2 - NONCE BASED ... -->
     <!-- <script>
       (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
