--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
 
 		<!-- [ℹ] PWA - MANIFEST 
     -->
-		<link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
+		<link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
 
 		<!-- [ℹ] Website Fonts
     -->
