--- a/src/app.html
+++ b/src/app.html
@@ -34,7 +34,7 @@
 
     <!-- [ℹ] GOOGLE V1 - ORIGINAL
     -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"></script> 
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"></script>  -->
     <!-- <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-60160331-9');</script> -->
     <!-- [ℹ] GOOGLE V2 - NONCE BASED ... -->
     <!-- <script>
