updating fixes and sprint issues + league_info null correction

--- a/src/app.html
+++ b/src/app.html
@@ -30,19 +30,23 @@
 
     <!-- [ℹ] YANDEX - ORIGINAL 
     -->
-    <!-- <script>(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})(window,document,"script","https://mc.yandex.ru/metrika/tag.js","ym");ym(86583540,"init",{clickmap:true,trackLinks:true,accurateTrackBounce:true,webvisor:true});</script> -->
+    <script>(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})(window,document,"script","https://mc.yandex.ru/metrika/tag.js","ym");ym(86583540,"init",{clickmap:true,trackLinks:true,accurateTrackBounce:true,webvisor:true});</script>
 
     <!-- [ℹ] GOOGLE V1 - ORIGINAL
     -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"></script>  -->
-    <!-- <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-60160331-9');</script> -->
-    <!-- [ℹ] GOOGLE V2 - NONCE BASED ... -->
-    <!-- <script>
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
-      var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id=UA-60160331-9'+i+dl;
-      var n=d.querySelector('[nonce]');n&&j.setAttribute('nonce',n.nonce||n.getAttribute('nonce'));f.parentNode.insertBefore(j,f);});
-      (window,document,'script','dataLayer','UA-60160331-9');
-    </script> -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"></script> 
+    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-60160331-9');</script>
+    
+    <!-- [ℹ] GOOGLE V2 - NONCE BASED
+    -->
+    <!-- 
+      <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
+        var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id=UA-60160331-9'+i+dl;
+        var n=d.querySelector('[nonce]');n&&j.setAttribute('nonce',n.nonce||n.getAttribute('nonce'));f.parentNode.insertBefore(j,f);});
+        (window,document,'script','dataLayer','UA-60160331-9');
+      </script> 
+    -->
 
 		%svelte.head%
 	</head>
