Enabling `mobile` pinch / zoom

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 		<meta name="theme-color" content="#292929" />
 
 		<!-- [ℹ] Website Icons & Favicons 
