updating `packages` & `sveltekit` breaking changes

--- a/src/app.html
+++ b/src/app.html
@@ -48,9 +48,9 @@
       </script> 
     -->
 
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body class='no-scrollbar'>
-		<div id="svelte">%svelte.body%</div>
+		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
