--- a/src/app.html
+++ b/src/app.html
@@ -33,9 +33,9 @@
     <!-- <script>
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})(window,document,"script","https://mc.yandex.ru/metrika/tag.js","ym");ym(86583540,"init",{clickmap:true,trackLinks:true,accurateTrackBounce:true,webvisor:true});
     </script> -->
-    <script>
+    <!-- <script>
       (function(w,d,c,n,s){if(w[n]){console.log('Creabl is already installed.');return;}w[n]={v:2,code:c,events:[],attrs:[],q:[],event:function(){this.events.push(arguments);},setAttributes:function(){this.attrs.push(arguments);},exec:function(){this.q.push(arguments);}};s=d.createElement('script');s.async=true;s.src='https://page-script.creabl.com/page-script.js?c='+c;d.head.appendChild(s);})(window,document,'hC9b-GEzNK','Creabl');
-    </script>
+    </script> -->
 
     <!-- [ℹ] GOOGLE V1 - ORIGINAL
     -->
