--- a/src/app.html
+++ b/src/app.html
@@ -36,6 +36,14 @@
     <!-- <script>
       (function(w,d,c,n,s){if(w[n]){console.log('Creabl is already installed.');return;}w[n]={v:2,code:c,events:[],attrs:[],q:[],event:function(){this.events.push(arguments);},setAttributes:function(){this.attrs.push(arguments);},exec:function(){this.q.push(arguments);}};s=d.createElement('script');s.async=true;s.src='https://page-script.creabl.com/page-script.js?c='+c;d.head.appendChild(s);})(window,document,'hC9b-GEzNK','Creabl');
     </script> -->
+    <script type='text/javascript'>
+      window.smartlook||(function(d) {
+        var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+        var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+        c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
+        })(document);
+        smartlook('init', 'd532d8ff8750a3614eebabdb41c0964ba3623154', { region: 'eu' });
+    </script>
 
     <!-- [ℹ] GOOGLE V1 - ORIGINAL
     -->
