--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,36 @@
 			content="width=device-width, initial-scale=1.0, user-scalable=yes"
 		/>
 		<meta name="theme-color" content="#292929" />
+    <link 
+      rel="stylesheet" 
+      type="text/css"
+      href="/app.css"
+    />
+    <!-- 
+    IMPORTANT 
+    mobile usability override
+    -->
+    <style>
+      body.googlebot-override main {
+        overflow: hidden;
+      }
+      body.googlebot-override p,
+      body.googlebot-override span,
+      body.googlebot-override h1,
+      body.googlebot-override h2 {
+        font-size: 14px;
+      }
+      body.googlebot-override div,
+      body.googlebot-override button,
+      body.googlebot-override a,
+      body.googlebot-override img,
+      body.googlebot-override td {
+        margin: 10px;
+      }
+      body.googlebot-override div#splash-screen {
+        margin: 0;
+      }
+    </style>
 		<!-- 
     [ℹ] Website Icons & Favicons 
     -->
@@ -108,7 +138,10 @@
 	</head>
 	<body
     data-sveltekit-preload-data="hover" 
-    class="no-scrollbar">
+    class="
+      no-scrollbar
+      googlebot-override
+    ">
 		<div id="svelte">
       %sveltekit.body%
     </div>
