--- a/src/app.html
+++ b/src/app.html
@@ -26,11 +26,12 @@
       body.googlebot-override h2 {
         font-size: 14px;
       }
-      body.googlebot-override div,
+      /* body.googlebot-override div,
       body.googlebot-override button,
       body.googlebot-override a,
       body.googlebot-override img,
-      body.googlebot-override td {
+      body.googlebot-override td { */
+      body.googlebot-override * {
         margin: 10px;
       }
       body.googlebot-override div#splash-screen {
