--- a/src/app.html
+++ b/src/app.html
@@ -17,6 +17,7 @@
     mobile usability override
     -->
     <style>
+      body.googlebot-override,
       body.googlebot-override main {
         overflow: hidden;
       }
@@ -32,7 +33,7 @@
       body.googlebot-override img,
       body.googlebot-override td { */
       body.googlebot-override * {
-        margin: 10px;
+        margin: 12px;
       }
       body.googlebot-override div#splash-screen {
         margin: 0;
