enhance: update img lazy load;

--- a/src/app.html
+++ b/src/app.html
@@ -103,7 +103,7 @@
     [ℹ] 1. SMARTLOOK
     [ℹ] 2. GOOGLE ANALYTICS
     -->
-		<script 
+		<!-- <script 
       type="text/javascript"
     >
 			window.smartlook ||
@@ -126,9 +126,9 @@
 				'd532d8ff8750a3614eebabdb41c0964ba3623154',
 				{ region: 'eu' }
 			);
-		</script>
+		</script> -->
 		<!-- V2 -->
-		<script
+		<!-- <script
 			async
 			src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"
 		>
@@ -140,7 +140,7 @@
 			}
 			gtag('js', new Date());
 			gtag('config', 'UA-60160331-9');
-		</script>
+		</script> -->
 		%sveltekit.head%
 	</head>
 	<body
