test: #1231; splash google-bot check (revert);

--- a/src/app.html
+++ b/src/app.html
@@ -11,11 +11,11 @@
       "
 		/>
 		<meta name="theme-color" content="#292929" />
-    <!-- <link 
+    <link 
       rel="stylesheet" 
       type="text/css"
       href="/app.css"
-    /> -->
+    />
     <!-- 
     IMPORTANT 
     [GOOGLEBOT] mobile usability override/hack
@@ -29,7 +29,7 @@
       body.googlebot-override span,
       body.googlebot-override h1,
       body.googlebot-override h2 {
-        font-size: 14px;
+        font-size: 20px;
       }
       /* body.googlebot-override div,
       body.googlebot-override button,
@@ -37,7 +37,7 @@
       body.googlebot-override img,
       body.googlebot-override td { */
       body.googlebot-override * {
-        margin: 12px;
+        margin: 20px;
       } 
       body.googlebot-override div#splash-screen {
         margin: 0;
