test: #1231; splash google-bot check (cont);

--- a/src/app.html
+++ b/src/app.html
@@ -38,6 +38,8 @@
       body.googlebot-override td { */
       body.googlebot-override * {
         margin: 20px;
+        display: grid !important;
+        grid-template-columns: 1fr !important;
       } 
       body.googlebot-override div#splash-screen {
         margin: 0;
