--- a/src/app.html
+++ b/src/app.html
@@ -29,7 +29,7 @@
       body.googlebot-override span,
       body.googlebot-override h1,
       body.googlebot-override h2 {
-        font-size: 20px;
+        font-size: 15vh;
       }
       /* body.googlebot-override div,
       body.googlebot-override button,
@@ -37,9 +37,9 @@
       body.googlebot-override img,
       body.googlebot-override td { */
       body.googlebot-override * {
-        margin: 15px;
+        margin: 5vw;
         display: grid !important;
-        gap: 15px;
+        gap: 5vw;
         grid-template-columns: 1fr !important;
       } 
       body.googlebot-override div#splash-screen {
