--- a/src/app.html
+++ b/src/app.html
@@ -21,6 +21,9 @@
     [GOOGLEBOT] mobile usability override/hack
     -->
     <style>
+      html {
+        overflow-y: hidden;
+      }
       body.googlebot-override,
       body.googlebot-override main {
         overflow-y: hidden;
@@ -29,7 +32,7 @@
       body.googlebot-override span,
       body.googlebot-override h1,
       body.googlebot-override h2 {
-        font-size: 15vh;
+        font-size: 15vw;
       }
       /* body.googlebot-override div,
       body.googlebot-override button,
@@ -37,9 +40,9 @@
       body.googlebot-override img,
       body.googlebot-override td { */
       body.googlebot-override * {
-        margin: 5vw;
+        margin: 2vw;
         display: grid !important;
-        gap: 5vw;
+        gap: 2vw;
         grid-template-columns: 1fr !important;
       } 
       body.googlebot-override div#splash-screen {
