test: #1231; splash google-bot check (cont);

--- a/src/app.html
+++ b/src/app.html
@@ -21,12 +21,9 @@
     [GOOGLEBOT] mobile usability override/hack
     -->
     <style>
-      html {
-        overflow-y: hidden;
-      }
       body.googlebot-override,
       body.googlebot-override main {
-        overflow-y: hidden;
+        overflow: hidden;
       }
       body.googlebot-override p,
       body.googlebot-override span,
