test: #1231; splash google-bot check (cont);

--- a/src/app.html
+++ b/src/app.html
@@ -26,13 +26,13 @@
       }
       body.googlebot-override,
       body.googlebot-override main {
-        overflow: hidden;
+        overflow-y: hidden;
       }
       body.googlebot-override p,
       body.googlebot-override span,
       body.googlebot-override h1,
       body.googlebot-override h2 {
-        font-size: 5vw;
+        font-size: 7vw;
         text-overflow: ellipsis;
       }
       /* body.googlebot-override div,
@@ -45,6 +45,7 @@
         display: grid !important;
         gap: 5vw;
         grid-template-columns: 1fr !important;
+        position: absolute;
       } 
       body.googlebot-override div#splash-screen {
         margin: 0;
