--- a/src/app.html
+++ b/src/app.html
@@ -21,6 +21,9 @@
     [GOOGLEBOT] mobile usability override/hack
     -->
     <style>
+      body.googlebot-override * {
+        all: unset;
+      }
       html {
         overflow-x: hidden !important;
       }
@@ -41,11 +44,9 @@
       body.googlebot-override img,
       body.googlebot-override td { */
       body.googlebot-override * {
-        all: initial;
+        margin: 10px;
         display: grid;
-        grid-template-columns: 1fr !important;
-        gap: 10px;
-        margin: 5px;
+        overflow-x: hidden !important;
       } 
       body.googlebot-override div#splash-screen {
         margin: 0;
