--- a/src/app.html
+++ b/src/app.html
@@ -4,18 +4,16 @@
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
-			content="
-        width=device-width, 
-        initial-scale=1.0, 
-        user-scalable=yes
-      "
+			content="width=device-width, initial-scale=1.0, user-scalable=yes"
 		/>
 		<meta name="theme-color" content="#292929" />
+
     <link 
       rel="stylesheet" 
       type="text/css"
       href="/app.css"
     />
+
     <!-- 
     IMPORTANT 
     [GOOGLEBOT] mobile usability override/hack
@@ -57,6 +55,7 @@
         grid-template-columns: 1fr !important;
       }
     </style>
+
 		<!-- 
     [ℹ] Website Icons & Favicons 
     -->
@@ -84,6 +83,7 @@
 			href="/assets/img/pwa/180x180 (iOS).png"
 			sizes="180x180"
 		/>
+
 		<!-- 
     [ℹ] PWA - MANIFEST 
     -->
@@ -92,6 +92,7 @@
 			crossorigin="use-credentials"
 			href="/manifest.json"
 		/>
+
 		<!-- 
     [ℹ] Website Fonts
     -->
@@ -111,11 +112,9 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 			rel="stylesheet"
 		/>
+
 		<!-- 
-    [ℹ] ANALYTICS TAGS
-    <-contents->
-    [ℹ] 1. SMARTLOOK
-    [ℹ] 2. GOOGLE ANALYTICS
+    [ℹ] SMARTLOOK (3rd-PARTY)
     -->
 		<script 
       type="text/javascript"
@@ -141,12 +140,19 @@
 				{ region: 'eu' }
 			);
 		</script>
-		<!-- V2 -->
+
+		<!-- 
+    [ℹ] GOOGLE TAG (3rd-PARTY)
+    -->
 		<script
 			async
 			src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"
 		>
     </script>
+
+    <!-- 
+    [ℹ] GOOGLE ANALYTICS (3rd-PARTY)
+    -->
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag() {
@@ -155,8 +161,10 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-60160331-9');
 		</script>
+
 		%sveltekit.head%
 	</head>
+
 	<body
     data-sveltekit-preload-data="hover" 
     class="
@@ -167,4 +175,5 @@
       %sveltekit.body%
     </div>
 	</body>
+
 </html>
