--- a/src/app.html
+++ b/src/app.html
@@ -4,11 +4,7 @@
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
-			content="
-        width=device-width, 
-        initial-scale=1.0, 
-        user-scalable=yes
-      "
+			content="width=device-width,initial-scale=1.0,user-scalable=yes"
 		/>
 		<meta name="theme-color" content="#292929" />
     <link 
@@ -141,7 +137,10 @@
 				{ region: 'eu' }
 			);
 		</script>
-		<!-- V2 -->
+    
+		<!-- 
+    GOOGLE ANALYTICS
+    
 		<script
 			async
 			src="https://www.googletagmanager.com/gtag/js?id=UA-60160331-9"
@@ -155,6 +154,24 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-60160331-9');
 		</script>
+    -->
+
+    <!-- 
+    GOOGLE ANALYTICS GA4
+    -->
+    <script
+      async 
+      src="https://www.googletagmanager.com/gtag/js?id=G-LDMRQC7B7Z"
+    >
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LDMRQC7B7Z');
+    </script>
+
 		%sveltekit.head%
 	</head>
 	<body
