--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="%lang%">
+
 	<head>
-		<meta charset="utf-8" />
+
+		<meta
+      charset="utf-8"
+    />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, user-scalable=yes"
 		/>
-		<meta name="theme-color" content="#292929" />
+		<meta
+      name="theme-color"
+      content="#292929"
+    />
 
     <link
       rel="stylesheet"
@@ -57,7 +64,7 @@
     </style>
 
 		<!--
-    [ℹ] Website Icons & Favicons
+    ICONS & FAVICONS
     -->
 		<link
 			rel="icon"
@@ -85,7 +92,7 @@
 		/>
 
 		<!--
-    [ℹ] PWA - MANIFEST
+    PWA - MANIFEST
     -->
 		<link
 			rel="manifest"
@@ -94,7 +101,7 @@
 		/>
 
 		<!--
-    [ℹ] Website Fonts
+    Website Fonts
     -->
 		<link
       as="style"
