--- a/src/app.html
+++ b/src/app.html
@@ -19,13 +19,15 @@
       rel="stylesheet"
       type="text/css"
       href="/app.css"
+      rel="preload"
+      as="style"
     />
 
     <!--
     IMPORTANT
     [GOOGLEBOT] mobile usability override/hack
     -->
-    <style>
+    <!-- <style>
       body.googlebot-override * {
         all: unset;
       }
@@ -61,7 +63,7 @@
       body.googlebot-override section#home-page {
         grid-template-columns: 1fr !important;
       }
-    </style>
+    </style> -->
 
 		<!--
     ICONS & FAVICONS
