--- a/src/app.html
+++ b/src/app.html
@@ -16,10 +16,15 @@
     />
 
     <link
+      rel="preload"
+      href="/app.css"
+      as="style"
+    />
+
+    <link
+      rel="stylesheet"
       type="text/css"
       href="/app.css"
-      rel="preload"
-      as="style"
     />
 
     <!--
