--- a/src/app.html
+++ b/src/app.html
@@ -26,7 +26,7 @@
       href="/app.css"
     />
 
-    <!-- <link
+    <link
       rel="preload"
       href="/all-css-chunk.css"
       as="style"
@@ -35,7 +35,7 @@
       rel="stylesheet"
       type="text/css"
       href="/all-css-chunk.css"
-    /> -->
+    />
     <!-- <link rel="stylesheet" href="/all-css-chunk.css" media="print" onload="this.media='all'" /> -->
 
     <!-- <style>
