--- a/src/app.html
+++ b/src/app.html
@@ -31,7 +31,7 @@
     IMPORTANT
     [GOOGLEBOT] mobile usability override/hack
     -->
-    <!-- <style>
+    <style>
       body.googlebot-override * {
         all: unset;
       }
@@ -67,7 +67,7 @@
       body.googlebot-override section#home-page {
         grid-template-columns: 1fr !important;
       }
-    </style> -->
+    </style>
 
 		<!--
     ICONS & FAVICONS
