chore(google-hack): update app.html (app.css) styles
add latest version of app.css styles to app.html;

--- a/src/app.html
+++ b/src/app.html
@@ -13426,6 +13426,14 @@
         color: var(--white) !important;
       }
 
+      .btn-dark
+      {
+        /* 🎨 style */
+        padding: 10px 17px;
+        border-radius: 12px;
+        background-color: var(--grey-color);
+      }
+
       .btn-right-icon
       {
         /* 🎨 style */
@@ -13775,6 +13783,13 @@
       {
         /* 🎨 style */
         border: 1px solid var(--dark-theme-1) !important;
+      }
+
+      .dark-background .btn-dark,
+      .dark-background-1 .btn-dark
+      {
+        /* 🎨 style */
+        background-color: var(--dark-theme-1-4-shade);
       }
 
       /* #endregion ➤ [MAIN] [DARK MODE (OVERRIDES) STYLES] Website Layout */
