refactor(app.html): adjust head element
Comment out all declared GoogleHack CSS styles (a.k.a disable). Using standard approach instead.

--- a/src/app.html
+++ b/src/app.html
@@ -36,7 +36,7 @@
     ▓ WARNING:
     ▓ > Does not work well for GoogleHack.
     -->
-    <!--
+
     <link
       rel="preload"
       href="/app.css"
@@ -46,7 +46,7 @@
       rel="stylesheet"
       type="text/css"
       href="/app.css"
-    /> -->
+    />
 
     <!--
     ▓ NOTE:
@@ -80,7 +80,7 @@
     ▓ NOTE:
     ▓ > Declare All (styles) 'all-in-one-css-file.css' as hard-coded styles.
     -->
-    <style>
+    <!-- <style>
       div#splash-screen.svelte-153p22t {
         position: fixed;
         top: 0;
@@ -12873,13 +12873,13 @@
       .dark-background-1.svelte-1oybxld div#competition⮕w⮕highlights⮕bottom-row div.participant-list img.participant-img.svelte-1oybxld {
         border: 2px solid var(--dark-theme-1)
       }
-    </style>
+    </style> -->
 
     <!--
     ▓ NOTE:
     ▓ > Declare all CSS 'app.css' as hard-coded styles.
     -->
-    <style>
+    <!-- <style>
       /*
       ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
       This is the main (global) css file used throughout the project - that                  ◼️
@@ -14455,7 +14455,7 @@
 
       /* #endregion ➤ [MAIN] [DARK MODE (OVERRIDES) STYLES] Website Layout */
 
-    </style>
+    </style> -->
 
     <!--
     ▓ NOTE:
@@ -14464,7 +14464,7 @@
     ▓ > Required, as the manual build styles does not pick these particular
     ▓ > styles up.
     -->
-    <style>
+    <!-- <style>
 
       main
       {
@@ -14549,7 +14549,7 @@
         }
       }
 
-    </style>
+    </style> -->
 
     <!--
     ▓ NOTE: ▓ IMPORTANT
