dev: new manifest

--- a/src/app.html
+++ b/src/app.html
@@ -14632,11 +14632,8 @@
     ╰──────────────────────────────────────────────────────────────────────────────────╯
     -->
 
-		<link
-			rel="manifest"
-			crossorigin="use-credentials"
-			href="/manifest.json"
-		/>
+    <link rel="manifest" href="https://progressier.app/A0K7kzxcIrOaWtW8h3Ol/progressier.json"/>
+    <script defer src="https://progressier.app/A0K7kzxcIrOaWtW8h3Ol/script.js"></script>
 
     <!--
     ╭──────────────────────────────────────────────────────────────────────────────────╮
