--- a/src/app.html
+++ b/src/app.html
@@ -48,6 +48,7 @@
       href="/app.css"
     />
 
+
     <!--
     ▓ NOTE:
     ▓ > Declare all CSS 'all-in-one-css-file.css'.
@@ -14741,8 +14742,14 @@
       gtag('js', new Date());
       gtag('config', 'G-LDMRQC7B7Z');
     </script>
+     <!--
+    ╭──────────────────────────────────────────────────────────────────────────────────╮
+    │ 3rd-Party JS Snippet | optimonk                                      │
+    ╰──────────────────────────────────────────────────────────────────────────────────╯
+    -->
+    <script type="text/javascript" src="https://onsite.optimonk.com/script.js?account=240954" async></script>
 
-		%sveltekit.head%
+    %sveltekit.head%
 	</head>
 
   <!--
